Add massage-video block

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -73,6 +73,8 @@
 
 @use 'blocks/famous-clients/famous-clients';
 
+@use 'blocks/massage-video/massage-video';
+
 @use 'blocks/video-reviews/video-reviews';
 
 @use 'blocks/price-list/price-list';
