--- a/src/pug/pages/back-massage.pug
+++ b/src/pug/pages/back-massage.pug
@@ -132,6 +132,14 @@ block variables
           }
         ]
       },
+      massageVideo: {
+        id: '_0KHvR5FSXs',
+        poster: 'assets/img/massage-video/massage-video-poster_back.jpg',
+        sticker: {
+          position: 'left',
+          text: 'Авторская методика, входящая в раздел реабилитационной медицины'
+        }
+      },
       priceList: {
         showPromo: true
       }
@@ -141,6 +149,7 @@ block content
   include ../includes/modules/content/about-massage
   include ../includes/modules/content/application-form/application-block
   include ../includes/modules/content/reviews-block
+  include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
