--- a/src/pug/pages/body-lymphatic-drainage.pug
+++ b/src/pug/pages/body-lymphatic-drainage.pug
@@ -128,6 +128,14 @@ block variables
           }
         ]
       },
+      massageVideo: {
+        id: '6NFFW_ibDhc',
+        poster: 'assets/img/massage-video/massage-video-poster_lymphatic-drainage.jpg',
+        sticker: {
+          position: 'right',
+          text: 'Процедура приятная и расслабляющая, никакой боли'
+        }
+      },
       priceList: {
         showPromo: true
       }
@@ -137,6 +145,7 @@ block content
   include ../includes/modules/content/about-massage
   include ../includes/modules/content/application-form/application-block
   include ../includes/modules/content/reviews-block
+  include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
