--- a/src/pug/pages/chiromassage.pug
+++ b/src/pug/pages/chiromassage.pug
@@ -126,6 +126,11 @@ block variables
           }
         ]
       },
+      massageVideo: {
+        id: 'H9IRW0ffpWk',
+        poster: 'assets/img/massage-video/massage-video-poster_face.jpg',
+        sticker: false
+      },
       priceList: {
         showPromo: true
       }
@@ -135,6 +140,7 @@ block content
   include ../includes/modules/content/about-massage
   include ../includes/modules/content/application-form/application-block
   include ../includes/modules/content/reviews-block
+  include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
