--- a/src/pug/pages/facial-lymphatic-drainage.pug
+++ b/src/pug/pages/facial-lymphatic-drainage.pug
@@ -53,23 +53,6 @@ block variables
           ]
         }
       ],
-      featuresBlock: {
-        heading: 'Что вы получите от&nbsp;лимфодренажного массажа',
-        features: [
-          {
-            title: 'Пропадут отёки и&nbsp;мешки под&nbsp;глазами',
-            text: ``
-          },
-          {
-            title: 'Цвет лица станет здоровым и&nbsp;однородным',
-            text: ``
-          },
-          {
-            title: 'Уменьшится жирность и&nbsp;проблемы кожи',
-            text: ``
-          }
-        ]
-      },
       reviewsBlock: {
         title: 'Отзывы о&nbsp;массаже лица',
         reviews: [
@@ -123,6 +106,28 @@ block variables
           }
         ]
       },
+      massageVideo: {
+        id: 'H9IRW0ffpWk',
+        poster: 'assets/img/massage-video/massage-video-poster_face.jpg',
+        sticker: false
+      },
+      featuresBlock: {
+        heading: 'Что вы получите от&nbsp;лимфодренажного массажа',
+        features: [
+          {
+            title: 'Пропадут отёки и&nbsp;мешки под&nbsp;глазами',
+            text: ``
+          },
+          {
+            title: 'Цвет лица станет здоровым и&nbsp;однородным',
+            text: ``
+          },
+          {
+            title: 'Уменьшится жирность и&nbsp;проблемы кожи',
+            text: ``
+          }
+        ]
+      },
       priceList: {
         showPromo: true
       }
@@ -132,6 +137,7 @@ block content
   include ../includes/modules/content/about-massage
   include ../includes/modules/content/application-form/application-block
   include ../includes/modules/content/reviews-block
+  include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
