--- a/src/pug/pages/fullbody-massage.pug
+++ b/src/pug/pages/fullbody-massage.pug
@@ -131,6 +131,14 @@ block variables
           }
         ]
       },
+      massageVideo: {
+        id: 'lmt72qq1too',
+        poster: 'assets/img/massage-video/massage-video-poster_fullbody.jpg',
+        sticker: {
+          position: 'left',
+          text: 'Процедура идёт час, но можно продлить до полутора часов для большей проработки спины'
+        }
+      },
       priceList: {
         showPromo: true
       }
@@ -140,6 +148,7 @@ block content
   include ../includes/modules/content/about-massage
   include ../includes/modules/content/application-form/application-block
   include ../includes/modules/content/reviews-block
+  include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
