--- a/src/pug/pages/sculptural-buccal-massage.pug
+++ b/src/pug/pages/sculptural-buccal-massage.pug
@@ -125,6 +125,14 @@ block variables
           }
         ]
       },
+      massageVideo: {
+        id: 'H9IRW0ffpWk',
+        poster: 'assets/img/massage-video/massage-video-poster_face.jpg',
+        sticker: {
+          position: 'right',
+          text: 'Процедура абсолютно безболезненна'
+        }
+      },
       priceList: {
         showPromo: true
       }
@@ -134,6 +142,7 @@ block content
   include ../includes/modules/content/about-massage
   include ../includes/modules/content/application-form/application-block
   include ../includes/modules/content/reviews-block
+  include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
