--- a/src/pug/pages/anti-cellulite-massage.pug
+++ b/src/pug/pages/anti-cellulite-massage.pug
@@ -129,6 +129,11 @@ block variables
           }
         ]
       },
+      massageVideo: {
+        id: 'q6TCTNKIU4M',
+        poster: 'assets/img/massage-video/massage-video-poster_anticellulite.jpg',
+        sticker: false
+      },
       priceList: {
         showPromo: true
       }
@@ -138,6 +143,7 @@ block content
   include ../includes/modules/content/about-massage
   include ../includes/modules/content/application-form/application-block
   include ../includes/modules/content/reviews-block
+  include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
