--- a/src/pug/pages/figure-modeling.pug
+++ b/src/pug/pages/figure-modeling.pug
@@ -131,6 +131,11 @@ block variables
           }
         ]
       },
+      massageVideo: {
+        id: 'y8nZNDosExU',
+        poster: 'assets/img/massage-video/massage-video-poster_figure-modeling.jpg',
+        sticker: false
+      },
       priceList: {
         showPromo: true
       }
@@ -140,6 +145,7 @@ block content
   include ../includes/modules/content/about-massage
   include ../includes/modules/content/application-form/application-block
   include ../includes/modules/content/reviews-block
+  include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
