--- a/src/pug/pages/neck-massage.pug
+++ b/src/pug/pages/neck-massage.pug
@@ -126,6 +126,14 @@ block variables
           }
         ]
       },
+      massageVideo: {
+        id: 'YM_MU5ZTGVI',
+        poster: 'assets/img/massage-video/massage-video-poster_all.jpg',
+        sticker: {
+          position: 'left',
+          text: 'Сеанс идёт 15 минут и больше подходит для профилактики'
+        }
+      },
       priceList: {
         showPromo: false
       }
@@ -135,6 +143,7 @@ block content
   include ../includes/modules/content/about-massage
   include ../includes/modules/content/application-form/application-block
   include ../includes/modules/content/reviews-block
+  include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
