--- a/src/pug/pages/sports-massage.pug
+++ b/src/pug/pages/sports-massage.pug
@@ -134,6 +134,14 @@ block variables
           }
         ]
       },
+      massageVideo: {
+        id: 'YM_MU5ZTGVI',
+        poster: 'assets/img/massage-video/massage-video-poster_all.jpg',
+        sticker: {
+          position: 'left',
+          text: 'Проработка довольно сильная, но безопасная'
+        }
+      },
       priceList: {
         showPromo: true
       }
@@ -143,6 +151,7 @@ block content
   include ../includes/modules/content/about-massage
   include ../includes/modules/content/application-form/application-block
   include ../includes/modules/content/reviews-block
+  include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
