--- a/src/pug/pages/classic-facial-massage.pug
+++ b/src/pug/pages/classic-facial-massage.pug
@@ -71,7 +71,10 @@ block variables
         ]
       },
       massageResults: {
-        title: 'Результаты массажа лица'
+        title: 'Результаты массажа лица',
+        face: {
+          slidesOrder: [1]
+        }
       },
       reviewsBlock: {
         title: 'Отзывы о&nbsp;массаже лица',
