--- a/src/pug/pages/anti-cellulite-massage.pug
+++ b/src/pug/pages/anti-cellulite-massage.pug
@@ -77,7 +77,10 @@ block variables
         ]
       },
       massageResults: {
-        title: 'Результаты антицеллюлитного массажа'
+        title: 'Результаты антицеллюлитного массажа',
+        figure: {
+          slidesOrder: [1, 2, 9, 10, 11, 12, 3, 4, 5, 6, 7, 8]
+        }
       },
       reviewsBlock: {
         title: 'Отзывы об&nbsp;антицеллюлитном массаже',
