--- a/src/pug/pages/back-massage.pug
+++ b/src/pug/pages/back-massage.pug
@@ -151,6 +151,7 @@ block variables
 block content
   include ../includes/modules/content/about-massage
   include ../includes/modules/content/application-form/application-block
+  include ../includes/modules/content/massage-results/wrap
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
