--- a/src/pug/pages/chiromassage.pug
+++ b/src/pug/pages/chiromassage.pug
@@ -74,7 +74,10 @@ block variables
         ]
       },
       massageResults: {
-        title: 'Результаты массажа лица'
+        title: 'Результаты массажа лица',
+        face: {
+          slidesOrder: [1, 7, 8, 9, 2, 3, 4, 5, 6]
+        }
       },
       reviewsBlock: {
         title: 'Отзывы о&nbsp;массаже лица',
