--- a/src/pug/pages/facial-lymphatic-drainage.pug
+++ b/src/pug/pages/facial-lymphatic-drainage.pug
@@ -54,7 +54,10 @@ block variables
         }
       ],
       massageResults: {
-        title: 'Результаты массажа лица'
+        title: 'Результаты массажа лица',
+        face: {
+          slidesOrder: [1]
+        }
       },
       reviewsBlock: {
         title: 'Отзывы о&nbsp;массаже лица',
