--- a/src/pug/pages/figure-modeling.pug
+++ b/src/pug/pages/figure-modeling.pug
@@ -79,7 +79,10 @@ block variables
         ]
       },
       massageResults: {
-        title: 'Результаты ручного моделирования'
+        title: 'Результаты ручного моделирования',
+        figure: {
+          slidesOrder: [2, 1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
+        }
       },
       reviewsBlock: {
         title: 'Отзывы о&nbsp;ручном моделировании фигуры',
