--- a/src/pug/pages/japanese-asahi-massage.pug
+++ b/src/pug/pages/japanese-asahi-massage.pug
@@ -76,7 +76,10 @@ block variables
         ]
       },
       massageResults: {
-        title: 'Результаты массажа лица'
+        title: 'Результаты массажа лица',
+        face: {
+          slidesOrder: [1, 5, 6, 9, 2, 3, 4, 7, 8]
+        }
       },
       reviewsBlock: {
         title: 'Отзывы о&nbsp;массаже лица',
