--- a/src/pug/pages/sculptural-buccal-massage.pug
+++ b/src/pug/pages/sculptural-buccal-massage.pug
@@ -73,7 +73,10 @@ block variables
         ]
       },
       massageResults: {
-        title: 'Результаты массажа лица'
+        title: 'Результаты массажа лица',
+        face: {
+          slidesOrder: [1, 2, 3, 4, 5, 6, 7, 8]
+        }
       },
       reviewsBlock: {
         title: 'Отзывы о&nbsp;массаже лица',
